--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue; /*Pode escolher outra cor se quiser*/
+  background-color:salmon; /*Pode escolher outra cor se quiser*/
 }
 
 h1 {
@@ -8,6 +8,7 @@ h1 {
 }
 
 p {
+  color :white;
   font-family: verdana;
   font-size: 20px;
 }
